--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body {
-  background-color: #222;
-  color: #eee;
-}
+/*html, body {*/
+/*  background-color: #222;*/
+/*  color: #eee;*/
+/*}*/
